[project]
name = "skills-secure-code-game"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yokoba", email = "31529581+yokoba@users.noreply.github.com" }
]
dependencies = [
    "pyOpenSSL>=24.0.0",
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
    "rich>=13.7.0",
    "flask>=3.0.2",
    "bcrypt>=4.1.2",
    "flask-testing>=0.8.1",
    "blinker>=1.7.0",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "skills_secure_code_game:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/skills_secure_code_game"]
